hphp/hack/test/typecheck/genericarguments/generic_new_bad_arity.php.exp
File "generic_new_bad_arity.php", line 9, characters 12-12:
The type D expects 2 type parameter(s) (Typing[4101])
